# agitrack

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  HANDOFF.md  Makefile  README.md  mypy-baseline.txt  pyproject.toml  tictactoe.py
.github/actions/ai-release-notes/: action.yml
.github/workflows/: ci.yml  docs-sitemap.yml  pages.yml  release-patch.yml  release-tag.yml  release.yml
0bfd9321388a1438f9bca4a7d1ee5018625157d5/shiqiangw/shiqiangw-session-1/: manifest.json
0bfd9321388a1438f9bca4a7d1ee5018625157d5/shiqiangw/village/: manifest.json
agit/: __init__.py  __main__.py  actions.py  claude_session.py  cli.py  commit_message.py  git.py  global_config.py  opencode_session.py  proxy.py  session.py  shell.py  state.py  ui.py  worktree.py
agit/backends/: base.py  claude.py  opencode.py  proxy_agents.py  setup.py
agit/commits/: __init__.py  actions.py  message.py
agit/config/: __init__.py  settings.py  state.py
agit/git/: __init__.py  lock.py  repo.py  worktree.py
agit/metrics/: __init__.py  collect.py  github.py  render.py  server.py  web.py
agit/proxy/: __init__.py  commit_engine.py  integration.py  modal.py  process.py  renderer.py  runner.py  sandbox.py  session.py  terminal.py
agit/sessions/: __init__.py  identity.py  redact.py  store.py
agit/shell/: __init__.py  runner.py  ui.py
agit/summaries/: __init__.py  model_select.py  prompts.py  summarizer.py
agit/transcripts/: __init__.py  claude.py  opencode.py  types.py
agit/update/: __init__.py  updater.py
agitrack/: __init__.py  __main__.py  cli.py  daemons.py  env.py  events.py  proc.py  recovery.py  system_tools.py
agitrack/backends/: __init__.py  base.py  claude.py  opencode.py  proxy_agents.py  setup.py
agitrack/commits/: __init__.py  actions.py  manual.py  message.py
agitrack/config/: __init__.py  migrate.py  settings.py  state.py
agitrack/git/: __init__.py  hooks.py  lock.py  repo.py  worktree.py
agitrack/metrics/: __init__.py  backtrace.py  backtrace_commit.py  collect.py  daemon.py  export.py  files.py  github.py  insights.py  learn.py  render.py  routing.py  server.py  web.py
agitrack/proxy/: __init__.py  background.py  commit_engine.py  host_prompt.py  integration.py  modal.py  process.py  pty_backend.py  renderer.py  runner.py  sandbox.py  session.py  session_names.py  terminal.py
agitrack/proxy/platform/: __init__.py  _conpty.py  _winconsole.py  base.py  nt.py  posix.py
agitrack/routing/: __init__.py  judge.py  policy.py  router.py  signals.py  store.py  switch.py
agitrack/sessions/: __init__.py  identity.py  redact.py  share_cap.py  store.py
agitrack/shell/: __init__.py  bridge.py  runner.py  ui.py
agitrack/summaries/: __init__.py  model_select.py  prompts.py  summarizer.py
agitrack/transcripts/: __init__.py  claude.py  edits.py  opencode.py  types.py
agitrack/update/: __init__.py  marker.py  updater.py
dev/: menu-workflows.md
dev/winmouse/: FINDINGS.md  harness.py  inject_backend.py  mouse_child.py  probe_backend.py  switch_modes.py
devtools/winmouse/: FINDINGS.md  harness.py  inject_backend.py  probe_backend.py  switch_modes.py
docs/: CNAME  about.html  docs.html  generate_sitemap.py  index.html  readmore.html  robots.txt  sitemap.xml  user-flow.md
docs/demo/: demo.tape  learning.json  prepare.sh
docs/design/: msi-self-update.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts  github.test.ts  github.ts  installPaths.test.ts  installPaths.ts  liveness.test.ts  liveness.ts  msi.test.ts  msi.ts  platform.test.ts  platform.ts
installer/: agitrack-update.cmd  agitrack.spec  agitrack.wxs  license.rtf
no-root/shiqiangw/shiqiangw-session-1/: manifest.json
scripts/: check.sh  demo.sh  publish.sh  sync_vscode_version.py
tests/: FLOW_MATRIX.md  conftest.py  proxy_helpers.py  test_backend_commits.py  test_backend_process.py  test_backend_setup.py  test_backends_and_config.py  test_backends_setup.py  test_background.py  test_background_attribution.py  test_backtrace.py  test_backtrace_commit.py  test_bridge.py  test_claude_session.py  test_cli.py  test_commit_engine.py  test_commit_graph_resilience.py  test_commit_message.py  test_commit_message_summary.py  test_commits_actions.py  test_config_application.py  test_config_migrate.py  test_copy_to_base.py  test_daemons.py  test_dashboard.py  test_dashboard_daemon.py  test_dashboard_network.py  test_demo_script.py  test_events.py  test_export.py  test_flows.py  test_git_commit_encoding.py  test_git_hooks.py  test_git_notes.py  test_git_repo.py  test_insights.py  test_integration_service.py  test_learn.py  test_lock.py  test_main_module.py  (+46 more)
