[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agit"
version = "0.0.1"
description = "Interactive agent + git commit orchestration. Requires git and a backend CLI (Claude Code or OpenCode); the GitHub CLI (gh) is optional, used for the dashboard's GitHub-ID committer view."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "aGiT contributors"}]
dependencies = [
    "prompt_toolkit>=3.0.52",
    "pyte>=0.8.2",
    "watchdog>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "coverage>=7.14.1",
    "ruff>=0.9",
    "mypy>=1.13",
    "mypy-baseline>=0.7",
    "pre-commit>=4.0",
]

[project.scripts]
agit = "agit.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agit"]
omit = ["tests/*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Tests deliberately group some imports with the test sections they belong to.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Pragmatic baseline for a codebase adopting mypy incrementally: type-check the
# package, surface real issues, but don't require full strictness yet. The
# pre-existing errors are held in a baseline (see CI) and burned down separately.
files = ["agit"]
