[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# NOTE: `name` is the PyPI *distribution* name (what `pip install` takes); the
# import package and the installed command are both `agit`. The plain `agit`
# name on PyPI is owned by an unrelated project, so aGiT is published as
# `agit-ai` — `pip install agit-ai` then provides `import agit` and the `agit`
# command. `version` is managed by scripts/publish.sh (auto-incremented per
# release); 0.0.0 marks an unreleased working tree.
[project]
name = "agit-ai"
version = "0.0.1"
description = "Interactive coding-agent CLI that commits AI changes to git with traceable metadata."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "aGiT contributors"}]
dependencies = [
    "prompt_toolkit>=3.0.52",
    "pyte>=0.8.2",
    "watchdog>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "coverage>=7.14.1",
    "ruff>=0.9",
    "mypy>=1.13",
    "mypy-baseline>=0.7",
    "pre-commit>=4.0",
]

[project.scripts]
agit = "agit.cli:main"

[project.urls]
Homepage = "https://github.com/core-aix/agit"
Repository = "https://github.com/core-aix/agit"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agit"]
omit = ["tests/*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Tests deliberately group some imports with the test sections they belong to.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Pragmatic baseline for a codebase adopting mypy incrementally: type-check the
# package, surface real issues, but don't require full strictness yet. The
# pre-existing errors are held in a baseline (see CI) and burned down separately.
files = ["agit"]
