[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Ship ONLY the import package (and its subpackages). Without this, setuptools'
# flat-layout auto-discovery scans every top-level directory and fails the build
# the moment a non-excluded one appears (e.g. `dev/` for maintenance docs):
# "Multiple top-level packages discovered in a flat-layout: ['dev', 'agitrack']".
# Pinning the package set keeps the build stable as repo-root dirs come and go.
[tool.setuptools.packages.find]
include = ["agitrack*"]

# NOTE: `name` is the PyPI *distribution* name (what `pip install` takes). After
# the aGiT → aGiTrack rename, the distribution, the import package, and the
# installed command are all `agitrack` — `pip install agitrack` provides
# `import agitrack` and the `agitrack` command.
# `version` is managed by scripts/publish.sh (auto-incremented per release);
# 0.0.0 marks an unreleased working tree.
[project]
name = "agitrack"
version = "0.1.3"
description = "Interactive coding-agent CLI that commits AI changes to git with traceable metadata."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "aGiTrack contributors"}]
dependencies = [
    "prompt_toolkit>=3.0.52",
    "pyte>=0.8.2",
    "watchdog>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "coverage>=7.14.1",
    "ruff>=0.9",
    "mypy>=1.13",
    "mypy-baseline>=0.7",
    "pre-commit>=4.0",
]

[project.scripts]
agitrack = "agitrack.cli:main"

[project.urls]
Homepage = "https://github.com/core-aix/agitrack"
Repository = "https://github.com/core-aix/agitrack"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agitrack"]
omit = ["tests/*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Tests deliberately group some imports with the test sections they belong to.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Pragmatic baseline for a codebase adopting mypy incrementally: type-check the
# package, surface real issues, but don't require full strictness yet. The
# pre-existing errors are held in a baseline (see CI) and burned down separately.
files = ["agitrack"]
